clusters/arcanis/sftpgo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sftpgo
  namespace: sftpgo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sftpgo
  template:
    metadata:
      labels:
        app: sftpgo
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: sftpgo
        image: drakkan/sftpgo:v2.7.0
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
        ports:
        - containerPort: 2022
          hostPort: 2022
          name: sftp
        - containerPort: 8080
          name: http
        - containerPort: 10000
          name: telemetry
        volumeMounts:
        - name: data
          mountPath: /srv/sftpgo
        - name: home
          mountPath: /var/lib/sftpgo
        - name: media
          mountPath: /mnt/media
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: telemetry
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: telemetry
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
      volumes:
      - name: data
        hostPath:
          path: /storage/appdata/sftpgo/data
          type: DirectoryOrCreate
      - name: home
        hostPath:
          path: /storage/appdata/sftpgo/home
          type: DirectoryOrCreate
      - name: media
        hostPath:
          path: /storage/media
          type: Directory
