clusters/arcanis/sftpgo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftpgo
  namespace: sftpgo
spec:
  selector:
    app: sftpgo
  ports:
  - name: sftp
    port: 2022
    targetPort: 2022
  - name: http
    port: 8080
    targetPort: 8080
