clusters/arcanis/sftpgo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sftpgo
  namespace: sftpgo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: sftpgo.samantha-home-server.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sftpgo
            port:
              number: 8080
